# gator

./: .gitattributes  .gitignore  .prettierignore  Makefile  README.md  compose.yml  manage.py  package.json  providers_dump.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  vite.config.mjs
ansible/: README.md  ansible.cfg  deploy.yml  grok.md  playbook.yml  site.yml
ansible/group_vars/: all.yml
ansible/inventory/: production.yml  staging.yml
ansible/local_install/: mediacms.io  uwsgi.ini
apps/core/: admin.py  models.py  urls.py  views.py
apps/dashboard/: admin.py  apps.py  fields.py  fineuploader.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/files/: admin.py  backends.py  context_processors.py  feeds.py  forms.py  helpers.py  management_views.py  methods.py  tasks.py  urls.py
apps/tube/: apps.py  urls.py  views.py
apps/uploader/: apps.py  urls.py
apps/users/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/utils/: admin.py  filesystem.py  mixins.py  scanner.py
apps/video_encoding/: apps.py  models.py
apps/vod/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
cli-tool/: README.md  buffered_monitor.py  cli.py  flower_api.py  receiver.py
cli-tool/expired/: ew_api.py  ew_load.py
config/: celery.py  gunicorn.py  permissions.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
docs/: admins_docs.md  dev_exp.md  developers_docs.md  index.md  media_permissions.md  sftpgo.md  transcoding.md
frontend/: package.json  vite.config.js
frontend-ts/: package.json  vite.config.js
frontend-ts/src/: main.js
frontend/src/: App.vue  main.js
static/: debug.css
templates/admin/: xml_highlight_widget.html
templates/core/: base.html  edgeware_list.html  file_explorer.html  file_manager.html  (+5 more)
tests/: test_imports.py
vidra-kit/: .gitignore  .gitlab-ci.yml  pyproject.toml  readme.md
vidra-kit/public/: ffmpeg.md
vidra-kit/public/encoding/app/helpers/: ffmpeg.py
vidra-kit/public/encoding/dash/: modern.py  player.html  simple.py  stream.py
vidra-kit/scripts/spyder/: async_runner.py  main.py  remote_config.py  remote_searcher.py
vidra-kit/scripts/swarm/: USER_CONFIG.md  readme.md  users.yaml  users.yaml.example
vidra-kit/scripts/swarm/stacks/calculator/extra/: docker-compose-swarm.yml
vidra-kit/scripts/swarm/stacks/vidra-kit/: Makefile  docker-compose.yml
vidra-kit/scripts/swarm/stacks/vidra-kit/workflows/: Dockerfile  Dockerfile-slim  pip.conf  worker.py
vidra-kit/scripts/swarm/stacks/vydra/: compose.yml
vidra-kit/scripts/video/: __init__.py  __main__.py  readme.md  video_processor.py
vidra-kit/scripts/video/encoders/: __init__.py  abstract_encoder.py  ffmpeg_encoder.py
vidra-kit/scripts/video/packagers/: __init__.py  abstract_packager.py  bento4_packager.py  mp4box_packager.py  ping.py
vidra-kit/src/vidra_kit/: __init__.py  adi.py  celery_worker.py  sudo.py
vidra-kit/src/vidra_kit/adi/: __init__.py  cli.py  parser.py  sample_adi.xml  validator.py  validator_toolkit.py
vidra-kit/src/vidra_kit/adi/schemas/: CableLabs_ADI.xsd  primary_adi.xsd  secondary_types.xsd
vidra-kit/src/vidra_kit/backends/: __init__.py  api.py  ftp.py  sftp.py
vidra-kit/src/vidra_kit/backends/ateme/: neo-tpl.json  post_to_edgeware.sh
vidra-kit/src/vidra_kit/celery_app/: app.py  celery_results.py  rocno.py  setup.md  signals.py  tasks.py  tasks2.py
vidra-kit/src/vidra_kit/celery_app/config/: base.py  production.py  staging.py
vidra-kit/src/vidra_kit/cli/: monitor.py
vidra-kit/src/vidra_kit/ingest/: README.md  cms.py  manage.py
vidra-kit/src/vidra_kit/ingest/adi_parser/: README.md  __init__.py  cli.py  cli_old.py  cli_old_1.py  exceptions.py  models.py  parser.py  utils.py  validator_toolkit.py
vidra-kit/src/vidra_kit/ingest/adi_parser/validators/: adi_validator.py  validator.py
vidra-kit/src/vidra_kit/pipeline/: metadata.py  package.py  vod_ingest_flow.py
vidra-kit/src/vidra_kit/schemas/: ADI.xsd  AMS.xsd  AppData.xsd  Content.xsd  Metadata.xsd  Types.xsd
vidra-kit/src/vidra_kit/storage/: islon.py
vidra-kit/src/vidra_kit/vidra/: app.py  cli.py  providers.py  vydra_ping.py
(+193 files in other folders)
